<resources>
    <string name="app_name">nestlesufrida</string>
    <string name="action_settings">Settings</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Continuar</string>
    <string name="user">USUARIO</string>
    <string name="password">CONTRASEÑA</string>
    <string name="text_button">ENTRAR</string>
    <string name="call_support">LLAMAR A SOPORTE</string>
    <string name="text_terms">TÉRMINOS Y CONDICIONES</string>
    <string name="support">SOPORTE</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="support_subtitle">
        ¿Desea recibir ayuda de soporte?
    </string>
    <string name="support_description">
        Servicio disponible de 07:00 AM a 04:00 PM de lunes a viernes. El Sábado de 07:00 AM a 04:00 PM.
    </string>
    <string name="support_comunicate">
        Comunicarse al número
    </string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
</resources>